# LibRaw

./: .gitignore  CLEANUP-SUMMARY.md  CMakeLists.txt  PROJECT-STRUCTURE.md  README-CROSS-PLATFORM.md  README.md  快速参考.md  构建状态.md
cmake/: CMakeLists.txt  CheckCXXCompilerFlagAndEnableIt.cmake  build-type.cmake  compiler-flags.cmake  compiler-warnings-clang.cmake  compiler-warnings-gcc.cmake  compiler-warnings.cmake  debug-info.cmake  libraw.pc.in
cmake/toolchains/: aarch64-apple-darwin.cmake  x86_64-apple-darwin.cmake  x86_64-w64-mingw32.cmake
docs/: BUILD-CROSS-PLATFORM.md  BUILD-RESULTS.md
raw-demo/: CMakeLists.txt  README.md
raw-demo/src/: main.cpp  raw_processor.cpp  raw_processor.h
scripts/: README-TESTING.md  build-cross-platform.sh  build-unified.sh  quick-test.sh  test-binaries.sh  test-platform.sh
